gccida/g1/move_deaths
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12332:4: error: expected ';' after expression
rtx v21; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12332:5: error: use of undeclared identifier 'v21'; did you mean 'v20'?
rtx v21; // r14 
    ^~~
    v20
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12331:5: note: 'v20' declared here
int v20; // r14d 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12348:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v37; // r12 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12357:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode *v46; // r12 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12374:4: error: expected ';' after expression
rtx oldnotes; // [rsp+38h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12374:5: error: use of undeclared identifier 'oldnotes'
rtx oldnotes; // [rsp+38h] [rbp-40h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12398:22: error: expected expression
move_deaths( *( rtx *)( fld->rtwint + 8LL * v52-- + 8), maybe_kill_insn, from_cuid, to_insn, pnotes); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12414:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v49.rtwint = ( __int64)x->fld[0]; 
                       ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12415:22: error: expected expression
move_deaths( *( rtx *)&x[1], maybe_kill_insn, from_cuid, to_insn, pnotes); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12430:22: error: expected expression
move_deaths( *( rtx *)( v49.rtwint + 8), maybe_kill_insn, from_cuid, to_insn, pnotes); 
                     ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12447:13: error: expected ';' after expression
v15 = ( rtx)v15[1]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12478:1: error: use of undeclared identifier 'v21'
v21 = remove_death( regno, v13); 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12479:24: error: use of undeclared identifier 'v21'
v22 = regno <= 0x34 && v21 != 0LL; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12482:24: error: use of undeclared identifier 'v21'
v23.rtwint = ( __int64)v21->fld[0]; 
                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12492:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v30 = ( ( unsigned int)( mode_class_0[v24] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12511:26: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v34 = ( ( unsigned int)( mode_class_0[v26] - 5) < 2) + 1; 
                         ^~~~~~~~~~~~
                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12544:19: error: use of undeclared identifier 'v21'
if ( *( _BYTE *)( v21->fld[0].rtwint + 2) == *( ( _BYTE *)x + 2) ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12546:14: error: use of undeclared identifier 'v21'
*( _QWORD *)&v21[1] = *pnotes; 
             ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/combine.c:12547:11: error: use of undeclared identifier 'v21'
*pnotes = v21; 
          ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/move_deaths/src/obj/combine.o] Error 1
